--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -4,15 +4,49 @@ body {
 	color: #363636;
 }
 
-.ui-widget,.ui-widget .ui-widget {
-	
+body,p,h1,h2,h3,h4,table,td,th,ul,ol,textarea,input {
+	font-family: verdana, helvetica, arial, sans-serif;
 }
-
 
 #footer {
-	clear: both;
-	text-align: center;
-	color: #666666;
-	font-size: 0.85em;
+	background-color: #D3D3D3;
+	border: 1px solid #D3D3D3;
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
+	height: 25px;
 }
 
+#topoDaAplicacao {
+	margin: auto;
+	width: 1098px;
+}
+
+#barraFerramentas {
+	background-color: #D3D3D3;
+	border: 1px solid #D3D3D3;
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
+	height: 25px;
+}
+
+#content {
+	background-color: #FFFFFF;
+	border: 1px solid #D3D3D3;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+hr {
+	background-color: #D4D4D4;
+	border: 0 none;
+	clear: both;
+	color: #D4D4D4;
+	height: 1px;
+}
+
+.class {
+	margin-left: auto !important;
+	margin-right: auto !important;
+	width: 8em;
+	display: block;
+}
