--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -34,6 +34,7 @@ body,p,h1,h2,h3,h4,table,td,th,ul,ol,textarea,input {
 	border: 1px solid #D3D3D3;
 	margin-left: auto;
 	margin-right: auto;
+	padding: 15px;
 }
 
 hr {
